--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,14 @@
     <groupId>com.upright.demo</groupId>
     <artifactId>automationtesting</artifactId>
     <version>1.5.1</version>
+    <!--
+       <properties>
+           <project.built.sourceEncoding>UTF-8</project.built.sourceEncoding>
+           <suiteXmlFile>testNg.xml</suiteXmlFile>
+       </properties>
+    -->
 
-    <!-- http://extspeeder.com/userguide/intellij/  info about intellijIdea -->
+       <!-- http://extspeeder.com/userguide/intellij/  info about intellijIdea -->
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
         <dependency>
@@ -29,8 +35,18 @@
             <artifactId>java-client</artifactId>
             <version>7.0.0</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M3</version>
+        </dependency>
 
     </dependencies>
 </project>
